# sendgrid-manager

./: Cargo.toml
src/: main.rs  manage.rs
