[package]
name = "sendgrid-manager"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
sendgrid = { git = "https://github.com/hextrust/sendgrid-rs", branch = "master-forked", features = ["async"] }
tokio = { version = "1.5", features = ["full"] }
thiserror = "1"
anyhow = "1"
ansi_term = "0.12"
console = "0.13"
indicatif = "0.15"
futures = "0.3"
